# mitoSim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
CellSim_2012/: main.cpp
CellSim_2012.xcodeproj/: project.pbxproj
CellSim_2012.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CellSim_2012.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
CellSim_2012/runs/: configMain_sample.tcl  configMito_sample.tcl  config_sample.txt
CellSim_2012/src/: AbilityForFission.h  AbilityForFusion.h  Cell.h  Config.h  ConfigMain.h  ConfigMito.h  CoreTransformer.h  Edge.h  FusionCandidates.h  Netw_IO.h  Network.h  NetworkCore.h  Segment.h  Simulation.h  Structure.h  main.cpp
CellSim_2012/src/Reactions/: Fission.h  Fusion.h  Fusion11.h  Fusion12.h  Fusion1L.h  NtwFission.h  NtwFusion11.h  NtwFusion12.h  NtwFusion1L.h  Reaction.h
CellSim_2012/src/utils/: Errors.cpp  Errors.h  Gillespie.h  Misc.cpp  Misc.h  Oel.cpp  Oel.h  Par.h  RandBoost.h  RandCore.h
DerivedData/CellSim_2012/Index/UniDB/CellSim_2012.xcindex/v8/p927/: lock.mdb
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  doxyfile.in
examples/: log_m_31.txt  log_m_32.txt  mitos_31  mitos_32
include/: ability_for_fission.h  ability_for_fusion.h  config.h  core_transformer.h  definitions.h  edge.h  fusion_candidates.h  network.h  segment.h  simulation.h  structure.h
include/reactions/: fission.h  fusion.h  fusion11.h  fusion12.h  fusion1u.h  ntw_fission.h  ntw_fusion11.h  ntw_fusion12.h  ntw_fusion1u.h  reaction.h
manual_make/: Makefile
mitosim/: CMakeLists.txt
mitosim/app/: main.cpp
mitosim/docs/: _CMakeLists.txt
mitosim/include/: ability_for_fission.h  ability_for_fusion.h  config.h  core_transformer.h  edge.h  fusion_candidates.h  network.h  segment.h  simulation.h  structure.h
mitosim/include/reactions/: fission.h  fusion.h  fusion11.h  fusion12.h  fusion1u.h  ntw_fission.h  ntw_fusion11.h  ntw_fusion12.h  ntw_fusion1u.h  reaction.h
mitosim/tests/: config_sample.txt
scripts/: README.md  config.py  odes.ipynb  odes.py  read_log.ipynb  read_log.py  records.py  requirements.txt
tests/: CMakeLists.txt  log_m_28.txt  log_m_29.txt  test_ability_for_fission.cpp  test_ability_for_fusion.cpp  test_config.cpp  test_core_transformer.cpp  test_edge.cpp  test_network.cpp  test_ntw_fusion_11.cpp  test_ntw_fusion_12.cpp  test_ntw_fusion_1u.cpp  test_segment.cpp  test_structure.cpp
tests/data/: config_sample.txt
